payroll with other change

--- a/web/src/app/admin/product-manage/product-manage.component.html
+++ b/web/src/app/admin/product-manage/product-manage.component.html
@@ -167,7 +167,7 @@
                                 </div>
                                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
                                     <button mat-raised-button color="primary"
-                                        [disabled]="newSpec.Type != ''" (click)="saveSpec()">Save</button>
+                                        [disabled]="newSpec.Name == ''" (click)="saveSpec()">Save</button>
                                 </div>
                             </div>
 
