--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -108,6 +108,7 @@
                 aria-hidden="true"></i></a>
             <div class="drop-content" id="collapseExample">
               <a href="javascript:void(0)" [routerLink]="['/companyPayment/expense']" id="collapseExample">Expense</a>
+              <a href="javascript:void(0)" [routerLink]="['/companyPayment/payroll']" id="collapseExample">Payroll</a>
             </div>
           </div>
           <!-- companyadmin end company payment -->
