--- a/web/src/app/company-payment/expense/expense.component.html
+++ b/web/src/app/company-payment/expense/expense.component.html
@@ -124,23 +124,19 @@
                 <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 mb-0 ">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Shop Name</mat-label>
-                        <mat-select name="ShopID" [(ngModel)]="data.ShopID" #singleSelect required
-                            appAutoFoucsDirectives>
-                            <mat-option [value]="0">All</mat-option>
+                        <mat-select name="ShopID" [(ngModel)]="data.ShopID"  required>
                             <mat-option [value]="sup.ID" *ngFor="let sup of dropShoplist">
                                 {{sup.Name}}
                                 <span [style.color]="'blue'" *ngIf="sup.AreaName !== 'null'">({{sup.AreaName}})</span>
                             </mat-option>
                         </mat-select>
-                        <mat-error>
-                            Select Shop
-                        </mat-error>
+                        <mat-error> Select Shop</mat-error>
                     </mat-form-field>
                 </div>
                 <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>ExpenseType</mat-label>
-                        <mat-select name="Category" [(ngModel)]="data.Category" #singleSelect required>
+                        <mat-select name="Category" [(ngModel)]="data.Category" required>
                             <mat-option [value]="e.Name" *ngFor="let e of ExpenseTypeList"> {{e.Name}} </mat-option>
                         </mat-select>
                         <mat-error>
