--- a/web/src/app/inventory/supplier/supplier.component.html
+++ b/web/src/app/inventory/supplier/supplier.component.html
@@ -131,7 +131,7 @@
 </section>
 <!-- model popup start -->
 <ng-template #content role="document" let-modal>
-    <div class="modal-header" style="height: 50px;">
+    <div class="modal-header" style="height: 50px; border-bottom: #ff651e 3px solid;">
         <h2 class="modal-title header pt-2" id="exampleModalLabel">Supplier Info [{{this.data.Sno}}]</h2>
         <button type="button" title="Close Botton" class="btn-close" aria-hidden="true"
             (click)="modal.dismiss('Cross click')"></button>
