--- a/web/src/app/admin/shop-list/shop-list.component.css
+++ b/web/src/app/admin/shop-list/shop-list.component.css
@@ -7,9 +7,19 @@
     display: inline-block;
     height: 24px;
     min-width: 100% !important;
- 
     line-height: 24px;
     white-space: nowrap;
     outline: none;
     -webkit-tap-highlight-color: transparent;
 }
+
+.mat-icon {
+    pointer-events: none;
+  }
+
+.bg-none{
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    padding: 0;
+    height: 35px;
+  }
