--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -109,6 +109,7 @@
             <div class="drop-content" id="collapseExample">
               <a href="javascript:void(0)" [routerLink]="['/companyPayment/expense']" id="collapseExample">Expense</a>
               <a href="javascript:void(0)" [routerLink]="['/companyPayment/payroll']" id="collapseExample">Payroll</a>
+              <a href="javascript:void(0)" [routerLink]="['/companyPayment/pettyCash']" id="collapseExample">PettyCash</a>
             </div>
           </div>
           <!-- companyadmin end company payment -->
