--- a/web/src/app/inventory/supplier/supplier.component.html
+++ b/web/src/app/inventory/supplier/supplier.component.html
@@ -88,6 +88,7 @@
                                         <th class="text-left">S.No</th>
                                         <th class="text-left">SupplierName</th>
                                         <th class="text-left">MobileNo</th>
+                                        <th class="text-left">GSTType</th>
                                         <th class="text-left">GST/VAT NO.</th>
                                         <th class="text-left">Address</th>
                                         <th class="text-left">PhoneNo</th>
@@ -110,6 +111,7 @@
                                         <td class="text-center">{{ dataList.length - i }}</td>
                                         <td class="text-center">{{data.Name}}</td>
                                         <td class="text-center">{{data.MobileNo1}}</td>
+                                        <td class="text-center">{{data.GSTType}}</td>
                                         <td class="text-center">{{data.GSTNo}}</td>
                                         <td class="text-center">{{(data.PhoneNo !== 'null')? data.PhoneNo: ''}}</td>
                                         <td class="text-center">{{(data.Email !== 'null')? data.Email: ''}}</td>
